[package]
name = "solana-hmac-sha256"
authors = ["Dean Little <@deanmlittle>"]
description = "A more efficient implementation of Keccak256 for SVM"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "solana_hmac_sha256"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-nostd-sha256 = "0.1.3"

[dev-dependencies]
hex = "0.4.3"