[package]
name = "solana-hmac-sha256"
authors = ["Dean Little <@deanmlittle>"]
description = "An efficient implementation of HMAC-SHA256 for SVM"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "solana_hmac_sha256"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-nostd-sha256 = "0.1.3"